# projeto_arduino_P2

P2_arduino_IOT__1_/: .gitignore  P1_arduino_IOT__1_.ino  README.md  pyproject.toml  run.bat
P2_arduino_IOT__1_/Arduino_backend/: app.py  schemas.py
P2_arduino_IOT__1_/Frontend/: login.css  login.html  login.js  tela.html
P2_arduino_IOT__1_/db/: init.sql
