[project]
name = "mvp-archeosys"
version = "0.1.0"
description = ""
authors = [
    {name = "OtavioRod",email = "otavioamorimalmeida@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]

[tool.poetry]
name = "mvp-archeosys"
version = "0.1.0"
description = ""
authors = ["OtavioRod <otavioamorimalmeida@hotmail.com>"]
readme = "README.md"
packages = [{ include = "mvp_archeosys" }]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = ">=0.115.12,<0.116.0" }
sqlalchemy = ">=2.0.41,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
python-jose = { extras = ["cryptography"], version = ">=3.5.0,<4.0.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
